# norma-core-berlin-hackathon

./: .env.example  .gitignore  .mcp.json  README.md
.cursor/: mcp.json
.norma/: direction_nudge.json  home_pose.json  manual_workspace.json  pick_calibration.json
calibration/elrobot-5B61037157/: latest
calibration/elrobot-5B61037157/2026-06-22T130734Z/: direction_nudge.json  intrinsics.json  manifest.json  square_poses.json
docs/datasets/export-parquet/: datasets-export.md
images/: extrinsics.json
software/agents/voice_assistant/: .env.example  .gitignore  README.md  agent.py  pyproject.toml
software/ai/smolvla_py/: README.md
software/ai/smolvla_py/scripts/: run_policy.py
software/ai/smolvla_py/smolvla/: stats.py
software/ai/smolvla_py/smolvla.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
software/drivers/motors-mirroring/src/inference/: mirror.rs  mod.rs
software/station/clients/station-viewer/: package.json  vite.config.ts
software/station/clients/station-viewer/src/hooks/: useLocalVisionDetections.ts  useManualWorkspaceCalibration.ts  useVisionDetections.ts
software/station/clients/station-viewer/src/pages/: HomePage.tsx
software/station/clients/station-viewer/src/st3215/: BusCard.tsx  CameraHudControls.tsx
software/station/clients/station-viewer/src/usbvideo/: CameraViewer.tsx  RobotCameraView.tsx  camera-calibration.ts  local-contrast-vision.ts  manual-workspace-calibration.ts  vision-overlay.ts  vision-types.ts  workspace-detection.ts  workspace-grid.ts
software/station/mcp/: README.md  debug_kinematics.py  pyproject.toml  test_small_move.py
software/station/mcp/norma_station_mcp/: __init__.py  __main__.py  arm_model.py  direction_control.py  example_joint_sequence.json  fake_station.py  fun_moves.py  kinematics.py  motor_state.py  paths.py  pick_calibration.py  pick_control.py  scripted_motions_demo.py  server.py  session.py  sim_visualizer.py  square_control.py  vision_bridge.py
software/station/mcp/tests/: test_kinematics.py  test_session_mock.py
software/station/vision/: README.md  pyproject.toml
software/station/vision/norma_vision/: __init__.py  apriltag_workspace.py  camera_calibration.py  contrast_detector.py  contrast_fallback.py  detector.py  env_config.py  frames.py  live_server.py  manual_workspace_store.py  marker_workspace.py  obb.py  paths.py  roboflow_detector.py  roboflow_workspace_detector.py  types.py  workspace.py  workspace_grid.py
software/station/vision/norma_vision/scripts/: __init__.py  run_detect.py  run_detect_offline.py  run_detect_webcam.py  run_live_overlay.py
videos/: README.md
