[project]
name = "norma-station-mcp"
version = "0.1.0"
description = "MCP server for NormaCore Station — control robots and read sensor state from AI assistants"
requires-python = ">=3.10"
dependencies = [
  "fastmcp>=2.11,<3",
  "ikpy>=3.4,<4",
  "numpy>=1.26",
]

[project.optional-dependencies]
sim = ["pybullet>=3.2"]

[project.scripts]
norma-station-mcp = "norma_station_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["norma_station_mcp"]

[dependency-groups]
dev = [
    "matplotlib>=3.7",
    "pytest>=8",
]
