[project]
name = "norma-station-mcp"
version = "0.1.1"
description = "MCP server for NormaCore Station — control robots and read sensor state from AI assistants"
requires-python = ">=3.10"
dependencies = [
  "fastmcp>=2.11,<3",
]

[project.optional-dependencies]
vision = [
  "ultralytics>=8.3.0",
  "opencv-python-headless>=4.8.0",
  "numpy>=1.24.0",
  "pillow>=10.0.0",
  "python-dotenv>=1.0.0",
  "pupil-apriltags>=1.0.4",
  "inference-sdk>=0.45.0",
  "clip @ git+https://github.com/ultralytics/CLIP.git",
]

[project.scripts]
norma-station-mcp = "norma_station_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["norma_station_mcp"]

[tool.hatch.metadata]
allow-direct-references = true
