[project]
name = "norma-vision"
version = "0.1.0"
description = "Pretrained open-vocabulary object detection for NormaCore Station cameras"
requires-python = ">=3.10"
dependencies = [
  "ultralytics>=8.3.0",
  "opencv-python-headless>=4.8.0",
  "numpy>=1.24.0",
  "pillow>=10.0.0",
  "python-dotenv>=1.0.0",
  "clip @ git+https://github.com/ultralytics/CLIP.git",
  "pupil-apriltags>=1.0.4.post11",
]

[project.optional-dependencies]
roboflow = [
  "inference-sdk>=0.45.0",
]

[project.scripts]
norma-vision-detect = "norma_vision.scripts.run_detect:main"
norma-vision-offline = "norma_vision.scripts.run_detect_offline:main"
norma-vision-webcam = "norma_vision.scripts.run_detect_webcam:main"
norma-vision-live = "norma_vision.scripts.run_live_overlay:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["norma_vision"]

[tool.hatch.metadata]
allow-direct-references = true
